department-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: game-2048
  name: department-2048
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: department
  replicas: 5
  template:
    metadata:
      labels:
        app.kubernetes.io/name: department
    spec:
      containers:
        - image: 215472211497.dkr.ecr.us-east-1.amazonaws.com/department:latest
          imagePullPolicy: Always
          name: department
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "0.5"
