springboot-deployment1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: game-2048
  name: deployment-2048
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: app-2048
  replicas: 5
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-2048
    spec:
      containers:
        - image: 215472211497.dkr.ecr.us-east-1.amazonaws.com/spring-boot-image:latest
          imagePullPolicy: Always
          name: app-2048
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "0.5"
